Fix right gap.

--- a/src/App.css
+++ b/src/App.css
@@ -3,17 +3,31 @@
 }
 
 body, html {
-  margin: 0 !important;
-  padding: 0 !important;
+  margin:  0 !important;
+  padding: 0.1% 0.1% 0.1% 0.1% !important;
   overflow: hidden;
 }
 
 #root {
-  max-width: 1280px;
-  margin: 0 auto;
-  margin-left: -50px;
-  padding: 2rem;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  min-width: 100vw;
+  min-height: 100vh;
+  background-color: #282c34;
+  color: white;
+  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Fira Sans', 'Droid Sans', 'Helvetica Neue', sans-serif;
+  line-height: 1.5;
+  font-weight: 400;
+  color-scheme: light dark;
+  font-synthesis: none;
+  text-rendering: optimizeLegibility;
+  -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale;
+  font-size: 1.2em;
   text-align: center;
+  padding: 0;
 }
 
 .logo {
@@ -42,14 +56,6 @@ body, html {
   a:nth-of-type(2) .logo {
     animation: logo-spin infinite 20s linear;
   }
-}
-
-.card {
-  padding: 2em;
-}
-
-.read-the-docs {
-  color: #888;
 }
 
 .tab {
@@ -121,7 +127,6 @@ body, html {
   position: absolute;
   top: 10px;
   right: 0;
-  margin-right: 10px; 
 }
 
 .header-logo {
